# skynet

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  apidoc.json  conf.dev.yml  conf.schema.json  conf.yml  develop.md  docker-compose.yml  get_offical_plugins.sh  go.mod  go.sum  main.go
actix-session/: Cargo.toml
actix-session/src/: config.rs  lib.rs  middleware.rs  session.rs
actix-session/src/storage/: mod.rs  redis_rs.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241201_000001_create_table.rs  m20250101_000001_alter_table.rs  m20250119_000001_create_table.rs
plugin/_agent/: Cargo.toml
plugin/_agent/src/: client.rs  main.rs
plugin/agent/: Cargo.toml  Makefile  config.yml
plugin/agent/src/: client.rs  command.rs  lib.rs  logger.rs  main.rs  shell.rs  socket.rs
plugin/agent_api/: Cargo.toml
plugin/agent_api/src/: lib.rs
plugin/agent_service/: Cargo.toml
plugin/agent_service/src/: lib.rs
plugin/monitor/: Cargo.toml  Makefile  README.md  api.go  build.rs  config.yml  interface.go  main.go  page.go  struct.go  wshandler.go
plugin/monitor/agent/: .gitignore  cmd.go  main.go  shell.go  stat.go  version.go
plugin/monitor/agent/daemon/: main.go
plugin/monitor/agent/shell/: command.go  options.go
plugin/monitor/assets/css/: style.css
plugin/monitor/assets/js/: xterm-addon-fit.js.map
plugin/monitor/frontend/: .umirc.ts  README.md  package.json
plugin/monitor/frontend/proto/: msg.proto
plugin/monitor/frontend/src/: app.tsx  common_components  common_locales  common_pages  config.ts  utils.ts
plugin/monitor/frontend/src/locales/: en-US.ts
plugin/monitor/frontend/src/pages/: 404.tsx  config.tsx  index.tsx  service.tsx  view.tsx
plugin/monitor/i18n/: en-US.yml
plugin/monitor/locales/: en-US.yml  zh-CN.yml
plugin/monitor/msg/: agent.pb.go  common.pb.go  msg.go  server.pb.go  shell.pb.go
plugin/monitor/proto/: agent.proto  common.proto  server.proto  shell.proto
plugin/monitor/response/: monitor.yml
plugin/monitor/shared/: chanmap.go  interface.go  map_agent.go  map_agent_gen.go  map_chan.go  map_cmdres.go  map_cmdres_gen.go  map_socket.go  map_socket_gen.go  websocket.go
plugin/monitor/src/: agent_session.rs  agent_ws.rs  api.rs  lib.rs  m20230101_000001_create_table.rs  request.rs  server.rs  service.rs  session.rs  web_session.rs  web_ws.rs  ws.rs  ws_handler.rs
plugin/monitor/src/entity/: agents.rs
plugin/monitor/src/migration/: m20230101_000001_create_table.rs  migrator.rs  mod.rs
plugin/monitor/src/msg/: client.rs  mod.rs  server.rs  session.rs
plugin/monitor/templates/: monitor.tmpl  setting.tmpl  shell.tmpl
plugin/monitor_api/: Cargo.toml  build.rs
plugin/monitor_api/proto/: agent.proto  common.proto  frontend.proto  server.proto
plugin/monitor_api/src/: lib.rs
plugin/monitor_api/src/entity/: agent_settings.rs  agents.rs  mod.rs  passive_agents.rs
plugin/monitor_service/: Cargo.toml
plugin/monitor_service/src/: client.rs  lib.rs  server.rs
plugin/monitor_service/src/entity/: agent_settings.rs  agents.rs  mod.rs
plugin/task/: Cargo.toml  Makefile  README.md  api.go  config.yml  interface.go  main.go
plugin/task/frontend/: README.md  package.json
plugin/task/frontend/src/: common_locales  common_pages  config.ts
plugin/task/frontend/src/components/: card.tsx  output.tsx  terminal.tsx
plugin/task/frontend/src/locales/: zh-CN.ts
plugin/task/frontend/src/pages/: 403.tsx  index.tsx
plugin/task/locales/: en-US.yml
plugin/task/response/: task.yml
plugin/task/shared/: interface.go  map_cancel.go
plugin/task/src/: api.rs  lib.rs  service.rs
plugin/task/src/migration/: m20240101_000001_create_table.rs  migrator.rs  mod.rs
plugin/task/templates/: menu.tmpl  task.tmpl
plugin/task_api/: Cargo.toml
plugin/task_api/src/: lib.rs
plugin/task_api/src/entity/: tasks.rs
skynet/: Cargo.toml  build.rs
skynet/frontend/: .gitignore  .umirc.ts  README.md  package.json
skynet/frontend/public/: sw.js
skynet/frontend/src/: access.ts  app.tsx  global.less  utils.ts
skynet/frontend/src/components/: PageLoading.tsx
skynet/frontend/src/components/account/: card.tsx  historyLink.tsx  permission.tsx  session.tsx  style.less  webpush.tsx
skynet/frontend/src/components/dashboard/: card.tsx  historyLink.tsx  runtime_card.tsx  system_card.tsx  (+2 more)
skynet/frontend/src/locales/: en-US.ts  zh-CN.ts
skynet/frontend/src/models/: setting.ts
skynet/frontend/src/pages/: 403.tsx  404.tsx  account.tsx  dashboard.tsx  index.tsx  notification.tsx  system.tsx
skynet/locales/: en-US.yml  zh-CN.yml
skynet/response/: skynet.yml
skynet/src/: config.rs  db.rs  handler.rs  hyuuid.rs  lib.rs  logger.rs  main.rs  permission.rs  plugin.rs  request.rs  utils.rs  webpush.rs
skynet/src/api/: auth.rs  client.rs  dashboard.rs  group.rs  misc.rs  mod.rs  notifications.rs  permission.rs  plugin.rs  setting.rs  user.rs
skynet/src/cmd/: check.rs  mod.rs  run.rs  user.rs
skynet/src/entity/: groups.rs  mod.rs  notifications.rs  permission_links.rs  permissions.rs  settings.rs  user_group_links.rs  users.rs
skynet/src/handler/: group.rs  logger.rs  mod.rs  notifications.rs  permission.rs  setting.rs  user.rs
skynet/src/handler_impl/: group.rs  mod.rs  notifications.rs  permission.rs  setting.rs  user.rs
skynet/src/service/: handler.rs  logger.rs  mod.rs  webpush.rs  websocket.rs
skynet_api/: Cargo.toml
skynet_api/src/: api.rs  config.rs  handler.rs  hyuuid.rs  lib.rs  logger.rs  permission.rs  plugin.rs  request.rs  serializer.rs  service.rs  skynet.rs  utils.rs
skynet_api/src/entity/: groups.rs  mod.rs  notifications.rs  permission_links.rs  permissions.rs  settings.rs  user_group_links.rs  user_histories.rs  users.rs  webpush_clients.rs  webpush_subscriptions.rs
skynet_api/src/viewer/: groups.rs  mod.rs  notifications.rs  permissions.rs  settings.rs  users.rs  webpush_clients.rs  webpush_subscriptions.rs
skynet_i18n/: Cargo.toml
skynet_i18n/src/: lib.rs
skynet_macro/: Cargo.toml
skynet_macro/src/: lib.rs
(+308 files in other folders)
