[workspace]

members = [
    "skynet_macro",
    "migration",
    "skynet_api",
    "skynet",
    "plugin/monitor_api",
    "plugin/monitor",
    "plugin/agent_api",
    "plugin/agent",
    "plugin/task",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace.metadata.cross.target.i686-unknown-linux-gnu]
pre-build = [
    "curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v27.3/protoc-27.3-linux-x86_32.zip",
    "unzip protoc-27.3-linux-x86_32.zip -d $HOME/.local",
    "rm protoc-27.3-linux-x86_32.zip",
    "mv $HOME/.local/bin/* /usr/bin/",
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v27.3/protoc-27.3-linux-aarch_64.zip",
    "unzip protoc-27.3-linux-aarch_64.zip -d $HOME/.local",
    "rm protoc-27.3-linux-aarch_64.zip",
    "mv $HOME/.local/bin/* /usr/bin/",
]
