[package]
name = "skynet"
version = "0.2.3"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "Service integration and management system, optimized for home-lab use."

[dependencies]
derivative = "2.2.0"
clap = { version = "4.5.17", features = ["derive"] }
parking_lot = "0.12.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
enum-map = "2.7.3"
base64 = "0.22.1"
argon2 = "0.5.3"
rand = "0.8.5"
num_cpus = "1.16.0"
qstring = "0.7.2"
thiserror = "1.0.63"

actix-files = "0.6.6"
validator = { version = "0.18.1", features = ["derive"] }
actix-web-validator = "6.0.0"
awc = { version = "3.5.1", default-features = false, features = [
    "cookies",
    "compress-gzip",
    "rustls-0_23-webpki-roots",
] }

skynet_api = { version = "0.1.2", path = "../skynet_api" }
skynet_macro = { path = "../skynet_macro" }
migration = { path = "../migration" }

[build-dependencies]

actix-cloud = { version = "0.4.1", features = ["response-build"] }
