[package]
name = "skynet"
version = "0.2.5"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "Service integration and management system, optimized for home-lab use."

[dependencies]
derivative = "2.2"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
serde_json = "1.0"
enum-map = "2.7"
base64 = "0.22"
argon2 = "0.5"
rand = "0.8"
num_cpus = "1.16"
qstring = "0.7"
thiserror = "1.0"
semver = "1.0"
dlopen2 = "0.7"
walkdir = "2.5"

actix-files = "0.6"
validator = { version = "0.18", features = ["derive"] }
actix-web-validator = "6.0"
awc = { version = "3.5", default-features = false, features = [
    "cookies",
    "compress-gzip",
    "rustls-0_23-webpki-roots",
] }
actix-cloud = "0.4"

skynet_api = { version = "0.2", features = [
    "skynet",
    "plugin",
    "extra-utils",
], path = "../skynet_api" }
skynet_macro = { version = "0.2", path = "../skynet_macro" }
migration = { path = "../migration" }

[build-dependencies]

actix-cloud = { version = "0.4", default-features = false, features = [
    "response-build",
] }
