[package]
name = "skynet"
version = "0.4.1"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "Service integration and management system, optimized for home-lab use."

[dependencies]
derivative = "2.2"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.11"
serde_json = "1.0"
serde_repr = "0.1"
enum-map = "2.7"
base64 = "0.22"
rand = "0.8"
num_cpus = "1.16"
qstring = "0.7"
thiserror = "2.0"
semver = "1.0"
walkdir = "2.5"
futures = "0.3"
abi_stable = "0.11"
async-recursion = "1.1"
dashmap = "6.1"
maxminddb = "0.24"
sysinfo = "0.33"

rustls = "0.23"
actix-files = "0.6"
validator = { version = "0.18", features = ["derive"] }
actix-web-validator = "6.0"
awc = { version = "3.5", default-features = false, features = [
    "cookies",
    "compress-gzip",
    "rustls-0_23-webpki-roots",
] }
actix-cloud = "0.4"
actix-ws = "0.3"

skynet_api = { version = "0.4", features = [
    "service",
    "plugin",
    "viewer",
    "request",
    "extra-utils",
], path = "../skynet_api" }
skynet_macro = { version = "0.3", path = "../skynet_macro" }
migration = { path = "../migration" }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[build-dependencies]

actix-cloud = { version = "0.4", default-features = false, features = [
    "response-build",
] }
