[package]
name = "skynet_api"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_with = "3.9.0"
serde_repr = "0.1.19"
uuid = { version = "1.10.0", features = [
    "v4",
    "macro-diagnostics",
    "fast-rng",
] }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.63"
derivative = "2.2.0"
enum-map = "2.7.3"
parking_lot = "0.12.3"
semver = "1.0.23"
enum-as-inner = "0.6.0"
libloading = "0.8.5"
zip = "2.2.0"
base64 = "0.22.1"
infer = "0.16.0"
paste = "1.0.15"
walkdir = "2.5.0"

sea-orm = { version = "1.0.0", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { version = "1.0.0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
actix-cloud = { version = "0.4.0", features = [
    "i18n",
    "memorydb",
    "redis",
    "session",
    "config-yaml",
    "response-json",
    "traceid",
    "rustls",
    "seaorm",
    "csrf",
] }
skynet_macro = "0.1.0"
