[package]
name = "skynet_api"
version = "0.2.10"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[features]
default = []
serde = [
    "dep:serde",
    "dep:serde-inline-default",
    "dep:serde_repr",
    "dep:serde_with",
]
database = ["dep:sea-orm", "actix-cloud-codegen/seaorm", "dep:chrono", "serde"]
extra-utils = ["dep:base64", "dep:infer"]
config = ["serde", "dep:validator", "actix-cloud/config"]
logger = ["serde", "actix-cloud/logger"]
permission = ["dep:derivative", "dep:enum-map"]
api = ["dep:derivative", "dep:semver"]
skynet = [
    "permission",
    "logger",
    "config",
    "api",
    "database",
    "dep:skynet_macro",
    "actix-cloud/memorydb",
    "actix-cloud/session",
    "actix-cloud/csrf",
    "actix-cloud/response-json",
    "dep:enum-as-inner",
    "dep:paste",
]
plugin = ["skynet", "dep:rustls", "dep:sea-orm-migration"]

[dependencies]
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "macro-diagnostics", "fast-rng"] }

actix-cloud = { version = "0.4", default-features = false, optional = true }
actix-cloud-codegen = { version = "0.2", optional = true }

# serde
serde = { version = "1.0", features = ["derive"], optional = true }
serde-inline-default = { version = "0.2", optional = true }
serde_repr = { version = "0.1", optional = true }
serde_with = { version = "3.11", optional = true }

# config
validator = { version = "0.18", features = ["derive"], optional = true }

# database
chrono = { version = "0.4", optional = true }
sea-orm = { version = "1.1", features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
], optional = true }

# permission
derivative = { version = "2.2", optional = true }
enum-map = { version = "2.7", optional = true }

# api
semver = { version = "1.0", optional = true }

# extra-utils
base64 = { version = "0.22", optional = true }
infer = { version = "0.16", optional = true }

# skynet
skynet_macro = { version = "0.2", path = "../skynet_macro", optional = true }
enum-as-inner = { version = "0.6", optional = true }
paste = { version = "1.0", optional = true }

# plugin
rustls = { version = "0.23", optional = true }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
], optional = true }
