[package]
name = "skynet_i18n"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
rust-i18n-support = "2"
proc-macro2 = "1.0"

[lib]
proc-macro = true
