[package]
name = "skynet_macro"
version = "0.2.3"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "Macros for Skynet."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
