[package]
name = "agent"
version = "0.3.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
derivative = "2.2.0"
sysinfo = "0.31.4"
byte-unit = "5.1.4"
machine-uid = "0.5.3"
sha3 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"
crc32fast = "1.4.2"
self-replace = "1.4.0"
miniz_oxide = "0.8.0"
portable-pty = "0.8.1"
thiserror = "1.0.63"
aes-gcm = "0.10.3"

skynet_api_monitor = { version = "0.2.0", path = "../monitor_api" }
skynet_api_agent = { version = "0.3.0", path = "../agent_api" }
skynet_api = { path = "../../skynet_api" }

[lib]
crate-type = ["cdylib"]
