[package]
name = "agent_api"
version = "0.2.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version-compare = "0.2.0"
enum-as-inner = "0.6.0"

skynet_api = { path = "../../skynet_api" }
