[package]
name = "skynet_api_agent"
version = "0.2.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet agent plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
version-compare = "0.2.0"
enum-as-inner = "0.6.0"

skynet_api = { version = "0.1.0", path = "../../skynet_api" }
