[package]
name = "agent_service"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.6"
version-compare = "0.2"

skynet = { path = "../../skynet" }
