[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
derivative = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
actix-web-validator = "5.0"
validator = { version = "0.16", features = ["derive"] }
actix = "0.13"
actix-web-actors = "4.2"
parking_lot = "0.12"
enum-as-inner = "0.6"
bytestring = "1.3.1"

skynet = { path = "../../skynet" }
skynet_macro = { path = "../../skynet_macro" }
skynet_i18n = { path = "../../skynet_i18n" }
sea-orm-migration = { version = "^0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-actix-rustls",
] }

[lib]
crate-type = ["cdylib", "rlib"]
