[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
derivative = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
actix-web-validator = "5.0"
validator = { version = "0.16", features = ["derive"] }
actix = "0.13"
actix-web-actors = "4.2"
parking_lot = "0.12"
base64 = "0.21"
crc32fast = "1.3"
miniz_oxide = "0.7"

monitor_service = { path = "../monitor_service" }
agent_service = { path = "../agent_service" }
skynet = { path = "../../skynet" }
skynet_i18n = { path = "../../skynet_i18n" }
sea-orm-migration = { version = "^0", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-actix-rustls",
] }

[lib]
crate-type = ["cdylib"]
