[package]
name = "monitor"
version = "0.2.4"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
derivative = "2.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
actix = "0.13.5"
actix-web-actors = "4.3.1"
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive"] }
itertools = "0.13.0"
once_cell = "1.19.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
crc32fast = "1.4.2"
miniz_oxide = "0.8.0"

skynet_api_monitor = { version = "0.2.0", path = "../monitor_api" }
skynet_api_agent = { version = "0.3.0", path = "../agent_api" }
skynet_api = { path = "../../skynet_api" }
skynet_macro = { path = "../../skynet_macro" }
sea-orm-migration = { version = "1.0.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]

actix-cloud = { version = "0.4.1", features = ["response-build"] }
