[package]
name = "monitor_api"
version = "0.2.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
derivative = "2.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_repr = "0.1.19"
enum-as-inner = "0.6.0"
ecies = { version = "0.2.7", default-features = false, features = [
    "std",
    "pure",
] }
prost = "0.13.1"
tokio = { version = "1.39.3", features = ["full"] }

skynet_api = { path = "../../skynet_api" }
skynet_macro = { path = "../../skynet_macro" }

[build-dependencies]
prost-build = "0.13.1"
walkdir = "2.5.0"
