[package]
name = "skynet_api_monitor"
version = "0.2.1"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet monitor plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
derivative = "2.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_repr = "0.1.19"
enum-as-inner = "0.6.0"
ecies = { version = "0.2.7", default-features = false, features = [
    "std",
    "pure",
] }
prost = "0.13.1"
tokio = { version = "1.39.3", features = ["full"] }

skynet_api = { version = "0.1.2", path = "../../skynet_api" }
skynet_macro = { version = "0.1.0", path = "../../skynet_macro" }

[build-dependencies]
prost-build = "0.13.1"
walkdir = "2.5.0"
