[package]
name = "monitor_service"
version = "1.0.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
bytestring = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = "0.1"
enum-as-inner = "0.6"
parking_lot = "0.12"

skynet = { path = "../../skynet" }
skynet_macro = { path = "../../skynet_macro" }
