[package]
name = "task"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor = { path = "../monitor" }
skynet = { path = "../../skynet" }

[lib]
crate-type = ["cdylib", "rlib"]
