[package]
name = "task"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde-inline-default = "0.2.0"
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive"] }

skynet_api_task = { version = "0.1.0", path = "../task_api" }
skynet_api = { path = "../../skynet_api" }
skynet_macro = { path = "../../skynet_macro" }
sea-orm-migration = { version = "1.0.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]

actix-cloud = { version = "0.4.1", features = ["response-build"] }
