[package]
name = "skynet_api_task"
version = "0.1.0"
edition = "2021"
authors = ["MXWXZ <matrixwxz@gmail.com>"]
description = "API for Skynet monitor plugin."
license = "GPL-3.0"
repository = "https://github.com/MXWXZ/skynet"
keywords = ["framework", "api", "ffi", "plugin"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }

skynet_api = { version = "0.1.2", path = "../../skynet_api" }
